In patient matching module, implemented a new framework for modifying score
Created a new package called "depreciated" to store unused, old classes
Moved EM, Linker, RecordLinker, ScoreModifier and ScorePairs into depreciated

MatchResult: 
Modified setScoreVector so that total score will be updated when the score vector is changed
Removed unused and dangerous setScore method
Added equals method and an unimplemented hashCode method

ScoreVector:
Converted Hashtable to HashMap
Added new method: getTotalScore

Modifier:
Added new method: initializeModifier()

ScaleWeightAnalyzer:
Added some getter functions

ScaleWeightAnalyzerTest:
Updated for use with score modifiers

ScorePair:
Removed hard-coded weight scaling

ScaleWeightModifier:
Instead of ScaleWeightAnalyzer implementing the modifier interface, this class does it because in weight scaling, information from both analyzers is needed

After XML configuration file is revised, a better design for these classes will be possible (removing unnecessary parameters from constructors etc.)